update corsConfig